--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <video id="v0" tabindex="0" autobuffer="autobuffer" preload="preload">
   <!--<source type="video/webm; codecs=&quot;vp8, vorbis&quot;" src="http://www.html5rocks.com/tutorials/video/basics/Chrome_ImF.webm"></source>
   <source type="video/ogg; codecs=&quot;theora, vorbis&quot;" src="http://www.html5rocks.com/tutorials/video/basics/Chrome_ImF.ogv"></source>-->
-  <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="v/demo_video.mp4"></source>
+  <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="v/video.mp4"></source>
   <p>Sorry, your browser does not support the &lt;video&gt; element.</p>
 </video>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
